[package]
name = "fuzz"
version = "0.1.0"
authors = ["Saurabh <iamsaurabhmandavkar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = "0.11.0"
tokio = "1.1.0"
quickcheck = "1.0.3"
error-chain = "0.12.4"